include searchbar submit event which returns trail objects given search criteria

--- a/templates/user.jade
+++ b/templates/user.jade
@@ -10,11 +10,7 @@ hr
 	
 	.results
 		h2 Last hiked:
-		.jumbotron
-			h1 Trail name
-		  	p Length
-		  	p Elevation
-		  	p Nearest City
+		include ./partials/_jumboHike.jade
 
 	ul.nav.nav-pills.nav-stacked
 		li.active
