--- a/templates/list.jade
+++ b/templates/list.jade
@@ -3,7 +3,7 @@ extends ./layout.jade
 header
 	h1 Wanna Hike
 
-	//this container is used to group home and back buttons together in the header
+	//container class used to in stylesheet to group home and back buttons
 	.btn-container
 		a.btn.btn-default.home(href="./index.html") Home
 		a.btn.btn-default.back(href="./user.html") Back
@@ -23,11 +23,7 @@ hr
 
 	//an individual list item
 	.group.myhikes__list-item
-		img(src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSHJtUKRZEmYVX4ahtEiOCScmjjX4ubA9EyHppW1iRvwK7wGhx0")
-		.info
-			h2 Trail name - 
-				span length
-			span Nearest City - Elevation - Rating - Status
+		include ./partials/_listHike.jade
 	hr
 		
 
