--- a/templates/partials/_searchResults.jade
+++ b/templates/partials/_searchResults.jade
@@ -1,9 +1,4 @@
 	.results
 	    h2 How great are these hikes, eh?
 
-	    .jumbotron
-			h1 Trail name
-		  	p Length
-		  	p Elevation
-		  	p Nearest City
-		  	a.btn.btn-success.btn-lg +
+	    include ./partials/_jumboHike.jade
