change jade files to render properly rather than point to static pages

--- a/templates/list.jade
+++ b/templates/list.jade
@@ -5,8 +5,8 @@ header
 
 	//container class used to in stylesheet to group home and back buttons
 	.btn-container
-		a.btn.btn-default.home(href="./index.html") Home
-		a.btn.btn-default.back(href="./user.html") Back
+		a.btn.btn-default.home(href="/") Home
+		a.btn.btn-default.back(href="/user") Back
 
 	a.btn.btn-default.reverse(href="#") Reverse Order
 hr
