--- a/templates/login.jade
+++ b/templates/login.jade
@@ -2,7 +2,7 @@ extends ./layout.jade
 
 header
 	h1 Good Hikes
-	a.btn.btn-default.home(href="./index.html") Home
+	a.btn.btn-default.home(href="/") Home
 hr
 
 .results
