--- a/templates/partials/_searchResults.jade
+++ b/templates/partials/_searchResults.jade
@@ -1,4 +1,4 @@
-	.results
-	    h2 How great are these hikes, eh?
+.results
+	h2 How great are these hikes, eh?
 
-	    include ./partials/_jumboHike.jade
+	include ./_jumboHike.jade
