--- a/templates/user.jade
+++ b/templates/user.jade
@@ -3,7 +3,7 @@ extends ./layout.jade
 header
 	h1 My Hikes
 
-	a.btn.btn-default.home(href="./index.html") Home
+	a.btn.btn-default.home(href="/") Home
 hr
 	
 	include ./partials/_searchBar.jade
@@ -14,8 +14,8 @@ hr
 
 	ul.nav.nav-pills.nav-stacked
 		li.active
-			a(href="./list.html") Wanna Hike (99)
+			a(href="/list") Wanna Hike (99)
 		li
-			a(href="./list.html") Have Hiked (25)
+			a(href="/list") Have Hiked (25)
 		li.disabled
-			a(href="./list.html") Custom Hike List (0)
+			a(href="/list") Custom Hike List (0)
