--- a/src/templates/layout.jade
+++ b/src/templates/layout.jade
@@ -1,7 +1,11 @@
-include ./partials/_head.jade
+doctype html
+html
+    include ./partials/_head.jade
 
-body
+    body
 
-    block content
+        block content
 
-    include ./partials/_footer.jade
+        footer App designed by students of Portland Code School 2015. Styles are built on top of Bootstrap & the Bootswatch theme "Simplex". Data pulled from trailapi.com.
+
+        script(type="text/javascript", src="/static/js/search.js")
