--- a/src/templates/partials/_searchBar.jade
+++ b/src/templates/partials/_searchBar.jade
@@ -1,3 +1,3 @@
-form.navbar-form.navbar-left(role="search")
+form#searchform.navbar-form.navbar-left(role="search" method="GET")
     .form-group
-        input(type="text", class="form-control", placeholder="Enter the name of a city, or zipcode")
+        input#searchbar(type="text", class="form-control", placeholder="Enter the name of a city, or zipcode")
