Add preliminary database connection/tasks.

--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -11,9 +11,9 @@ block content
 
     .results
         h2 How great are these hikes, eh?
-        
+
         include ./partials/_wide-hike.jade
 
 
 
-    a.btn.btn-default.more(href="#") See more hikes...
+    a.btn.btn-default.more(href="#", ng-click="addTrail()") See more hikes...
